2011-12-16  Murray Cumming  <murrayc@murrayc.com>

	Film Manager example: Use English for Day/Night choices.

	* examples/example_film_manager.glom: Use English for the custom choice 
	values. We need to allow these to be translated. See bug #666343

1.20.2:

2011-12-13  Murray Cumming  <murrayc@murrayc.com>

	Correct parsing of example data.

	* glom/libglom/data_structure/field.[h|cc]: to_file_format(),
	from_file_format() documentation: Mention that this uses CSV format.
	from_file_format(): Unescape double quotes, because we escape quotes
	as that in to_file_format().
	This avoids reading them as double quotes when opening an example file.
	This will also correct the interpretation of text default values.
	* Makefile_tests.am:
	* tests/test_field_file_format.cc: Add a test of this for text and image
	data, checking that what we write is what we read.

2011-12-13  Murray Cumming  <murrayc@murrayc.com>

	test_selfhosting_new_then_image: Move some code to test_utils.

	* Makefile_tests.am:
	* tests/test_selfhosting_new_then_image.cc: Move the test image-loading
	code to:
	* tests/test_utils.[h|cc]: get_value_for_image().

2011-12-12  Murray Cumming  <murrayc@murrayc.com>

	Small fix to repository_analyzer_begin_scan example script.

	* examples/example_scripts/repository_analyzer_begin_scan.py:
	Remove the global variables, used for debugging, because recent versions of 
	Python do not seem to treat them as global when this script is used as 
	a Button script in python. So it says they are undefined. They are, after 
	all, inside the function that glom defines.
	Although they would still work in this standalone script, it is nice to 
	have no difference between this file and the one used in this .glom file:
	https://gitorious.org/debian_repository_analyzer/debian_repository_analyzer

2011-12-09  Murray Cumming  <murrayc@murrayc.com>

	Combo_TextGlade: Work around GtkComboBoxText bug #612396.

	* glom/utility_widgets/combo_textglade.cc: Without setting 