@@ -1,3 +1,9 @@
+2011-12-18  Murray Cumming  <murrayc@localhost.localdomain>
+
+	reviewed by: <delete if not using a buddy>
+
+	* POTFILES.in:
+
 2011-11-16  Murray Cumming  <murrayc@murrayc.com>
 
 	Correct the date format in the es_ES locale. 
